# Low-Latency-Event-Bus

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: event.h  event_bus.h  latency_tracker.h  ring_buffer.h
src/: event_bus.cpp  latency_tracker.cpp  main.cpp
tests/: test_latency_tracker.cpp  test_ring_buffer.cpp
